# dlrs-release

./: .gitignore  Dockerfile  README.md  dlrs-release.json  entrypoint.sh  pyproject.toml
.github/workflows/: build-and-push.yml  build-push.yml  develop.yml  gitflow-branch-update.yml  gitflow-branch.yml  gitflow-update.yml  main.yml  on_create_branch.yml  on_push_feature_bugfix.yml  on_push_master_develop.yml  on_push_release_hotfix.yml  release-branch.yml  test.yml  variables.yml
