[tool.poetry]
name = "dlrs-release"
version = "v0.0.0"
description = "Image docker para deploy de aplicações"
authors = ["Lucas Cantarelli <lucascantarellijpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
pylint = "^2.17.4"
flask-wtf = "^1.1.1"
flask-toastr = "^0.5.8"
bcrypt = "^4.0.1"
pytest = "^7.3.2"
blue = "0.5.2"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pyupgrade = "^3.6.0"
bandit = "^1.7.5"
pip-audit = "^2.5.6"
autopep8 = "^2.0.2"